# publisherator

./: LICENSE  README.md  pyproject.toml  requirements.txt
.ai-docs/: logorator.md
publisherator/: cli.py  publisher.py
publisherator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_publisher.py
