[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "publisherator"
version = "0.1.7"
description = "One-command Python package publishing: bump version, commit, tag, push to GitHub, build, and upload to PyPI"
authors = [{name = "Arved Klöhn"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "build",
    "twine",
    "logorator",
]

[project.scripts]
publisherator = "publisherator.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/publisherator"
